# GoldMiner

./: AnimationObject.cpp  AnimationObject.h  CMakeLists.txt  Console.cpp  Console.h  FailedLevel.cpp  FrameInfo.cpp  FrameInfo.h  GameCommands.cpp  HighScore.cpp  ImageObject.cpp  ImageObject.h  ImageProcessing.cpp  Level_A.cpp  LineObject.cpp  Mineral.cpp  MineralCfg.cpp  MineralManager.cpp  Object.cpp  Object.h  README.docx  README.md  ShowTarget.cpp  SmoothScale.h  StartMenu.cpp  SucceedLevel.cpp  TextObject.cpp  TextObject.h  Timer.cpp  Timer.h  TriangleObject.cpp  TriangleObject.h  commands.cpp  complete-solution.md  imgCfg.cpp  imgCfg.h  integration-guide.md  levelCfg.cpp  levelCfg.h  main.cpp  (+4 more)
Markdown/: C++ 1a02b200fc1280f98264f5960d32c62c.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/: EasyX 19e2b200fc128013827ad80b78ede867.md  帧率检测 1a02b200fc1280e584ccce386619b27b.md  计时器 1a02b200fc12807ea60cd92f3dea9438.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/EasyX 19e2b200fc128013827ad80b78ede867/: EasyX无法调用 19e2b200fc12804fbbfef3cf4633712f.md  制作动画 19e2b200fc1280f59fc8fcfed99a3656.md  图像问题 19e2b200fc1280349020c267792cb703.md  按键输入问题 19f2b200fc1280c985c2da479adc80db.md  文字问题 19e2b200fc12802788c3f8b878e2a610.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/EasyX 19e2b200fc128013827ad80b78ede867/制作动画 19e2b200fc1280f59fc8fcfed99a3656/: 画面闪烁 19e2b200fc12804f93a8d67c7f35d86d.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/EasyX 19e2b200fc128013827ad80b78ede867/图像问题 19e2b200fc1280349020c267792cb703/: 图像旋转 1a02b200fc1280cab2ecdfac54ec5721.md  图片不显示 19e2b200fc1280e884abe89312a9d489.md  图片截取 1a02b200fc12801ba385d94949214945.md  掩码图不显示 19e2b200fc12806ab8bcfc4ea7686758.md  重定向绘图窗口所在地址 1a02b200fc12801e97f5c132a7c95891.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/EasyX 19e2b200fc128013827ad80b78ede867/按键输入问题 19f2b200fc1280c985c2da479adc80db/: 按键检测依赖于鼠标移动 19f2b200fc128023a286c803994eb1eb.md
Markdown/C++ 1a02b200fc1280f98264f5960d32c62c/EasyX 19e2b200fc128013827ad80b78ede867/文字问题 19e2b200fc12802788c3f8b878e2a610/: 字体问题 19e2b200fc12809893e2cbc117c4fe88.md
images/: CreateMask.py  png2bmp.py
src/: AnimationObject.h  Console.h  FrameInfo.h  GameCommands.h  ImageObject.h  ImageProcessing.h  LevelFunctions.h  LineObject.h  Mineral.h  MineralCfg.h  MineralManager.h  Object.h  TextObject.h  Timer.h  TriangleObject.h  commands.h  imgCfg.h  levelCfg.h  windowCfg.h
src/yaml/: entities.yaml  levels.yaml  player.yaml
yaml-cpp/lib/: yaml-cpp.lib
yaml-cpp/lib/cmake/yaml-cpp/: yaml-cpp-targets.cmake
yaml-cpp/lib/pkgconfig/: yaml-cpp.pc
